--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<%- include('components/Header.html', {title:"Les bandes déssinées"})%>
+<%- include(parts/components/Header.html', {title:"Les bandes déssinées"})%>
    <section>
       <div class="container">
          <h1 class="h1">coucou</h1>
