--- a/src/parts/Header.html
+++ b/src/parts/Header.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="../src/assets/img/favicon.ico" sizes="192x192" />
+    <link rel="icon" href="../assets/img/favicon.ico" sizes="192x192" />
     <title><%=title%> | <%=slogan%></title>
 </head>
 <body>
@@ -11,7 +11,7 @@
         <div class="logo_search">
             <div class="logo">
                 <a aria-label="Lien vers la page d'accueil" href="#">
-                    <img src="../src/assets/img/logo-asterix.png" alt="">
+                    <img src="../assets/img/logo-asterix.png" alt="">
                 </a>
             </div>
         </div>
