--- a/index.html
+++ b/index.html
@@ -1,23 +1,6 @@
-<%- include('./src/parts/Header.html', {title:"Les bandes dessinées"})%>
-   <section>
-      <div class="container">
-         <h1 class="h1">coucou</h1>
-    <div class="row">
-      <div class="col-3 col-md-4 col-sm-6 col-xs-12">
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet numquam incidunt autem ex quis labore doloremque necessitatibus doloribus adipisci est, error quibusdam recusandae ducimus, dignissimos nesciunt sed cumque, illo facere!
-      </div>
-      <div class="col-3 col-md-4 col-sm-6 col-xs-12">
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet numquam incidunt autem ex quis labore doloremque necessitatibus doloribus adipisci est, error quibusdam recusandae ducimus, dignissimos nesciunt sed cumque, illo facere!
-      </div>
-      <div class="col-3 col-md-4 col-sm-6 col-xs-12">
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet numquam incidunt autem ex quis labore doloremque necessitatibus doloribus adipisci est, error quibusdam recusandae ducimus, dignissimos nesciunt sed cumque, illo facere!
-      </div>
-      <div class="col-3 col-md-4 col-sm-6 col-xs-12">
-        <img loading="lazy" src="https://media.ouest-france.fr/v1/pictures/81b65d57b986475f2adfbacb30f3b295-30071213.jpg?width=1260&client_id=eds&sign=994a24dff8f4a8d37f7e2cf11db679fd0f753f2742af124e09cd4e0a790f63d4" alt="">
-      </div>
-    </div>
-      </div>
-   </section>
+
+<%- include('./src/assets/parts/Header.html', {title:"Les bandes déssinées"})%>
+   <%- include('./src/assets/parts/Hero-1.html', {title:"Les bandes déssinées", content:"Depuis leur première histoire, Astérix, Obélix et les Irréductibles ont vécu de nombreuses aventures, que ce soit au village ou aux quatre coins du monde. Ils ont rencontré de nombreux amis, relevé des défis mémorables… et bien sûr, affronté des adversaires fous (surtout ces Romains !).", img:"Asterix-Bandes-dessinees.png"})%>
    </main>
     <script type="module" src="/src/main.js"></script>
   </body>
