--- a/src/assets/parts/Header.html
+++ b/src/assets/parts/Header.html
@@ -14,6 +14,17 @@
                     <img src="./src/assets/img/logo-asterix.png" alt="">
                 </a>
             </div>
+<<<<<<<< HEAD:src/parts/Header.html
+            <div class="search_langs_mobile">
+                <a aria-controls="menu" aria-label="menu mobile" href="#" class="hbg">
+                    <span style="--pos:1"></span>
+                    <span style="--pos:1"></span>
+                    <span style="--pos:2"></span>
+                </a>
+            </div>
+        </div>
+        <nav id="memu" aria-expanded="false">
+========
             <div class="mobile_langs_search">
                 <a aria-controls="menu" aria-label="Menu mobile" href="" class="hbg">
                     <span style="--pos:1"></span>
@@ -23,6 +34,7 @@
             </div>
         </div>
         <nav aria-expanded="false" id="menu">
+>>>>>>>> dev:src/assets/parts/Header.html
             <div class="container">
                 <a href="">
                     Les <br> actualités
