--- a/src/assets/parts/Hero-1.html
+++ b/src/assets/parts/Hero-1.html
@@ -7,15 +7,11 @@
             <div class="col-6 col-sm-12">
                 <div class="content">
                     <h1 class="h1">
-                        <%= title%>
+                        <%= title %>
                     </h1>
-                    <p>
-                        <%= content%>
+                   
+                    <%- content %>
 
-                    </p>
-                    <a href="">
-                        smldjsmljdsjml
-                    </a>
                 </div>
             </div>
         </div>
