Fix header, footer improvement

--- a/src/assets/parts/Footer.html
+++ b/src/assets/parts/Footer.html
@@ -1,5 +1,7 @@
 </main>
-    <section class="newsletter">
+   
+    <footer>
+    <div class="newsletter">
         <img aria-hidden="true" src="./src/assets/img/contact-form-bg.png" alt="" class="wallpaper">
         <div class="container narrow-md">
                 <form class="row" action="">
@@ -35,13 +37,79 @@
                     </p>
                 </form>
         </div>
-    </section>
-    <footer>
+    </div>
+
         <div class="sitemap">
+            <img aria-hidden="true" src="./src/assets/img/asterix-footer-bg.png" alt="" class="wallpaper">
+            <div class="container narrow-md">
+                <div class="row">
+                    <div class="col-12">
+                        <h2 class="h4">
+                            Plan de site
+                        </h2>
+                    </div>
+                    <div class="col-3 col-xs-12">
+                        <h3 class="h4">
+                            Les Albums
+                        </h3>
+                        <a href="">Les bandes déssinées</a>
+                        <a href="">Les albums illustrés</a>
+                        <a href="">Les éditions spéciales</a>
+                        <a href="">Les intégrales</a>
+                        <a href="">Les bandes déssinées Idefix</a>
+                    </div>
+                    <div class="col-3 col-xs-12">
+                         <h3 class="h4">
+                            Les Albums
+                        </h3>
+                        <a href="">Les bandes déssinées</a>
+                        <a href="">Les albums illustrés</a>
+                        <a href="">Les éditions spéciales</a>
+                        <a href="">Les intégrales</a>
+                        <a href="">Les bandes déssinées Idefix</a>
+                    </div>
+                    <div class="col-3 col-xs-12">
+                         <h3 class="h4">
+                            Les Albums
+                        </h3>
+                        <a href="">Les bandes déssinées</a>
+                        <a href="">Les albums illustrés</a>
+                        <a href="">Les éditions spéciales</a>
+                        <a href="">Les intégrales</a>
+                        <a href="">Les bandes déssinées Idefix</a>
+                    </div>
+                    <div class="col-3 col-xs-12">
+                         <h3 class="h4">
+                            Les Albums
+                        </h3>
+                        <a href="">Les bandes déssinées</a>
+                        <a href="">Les albums illustrés</a>
+                        <a href="">Les éditions spéciales</a>
+                        <a href="">Les intégrales</a>
+                        <a href="">Les bandes déssinées Idefix</a>
+                    </div>
+                </div>
+            </div>
 
         </div>
         <div class="legal_contact">
-
+            <div class="container">
+                <div class="row">
+                    <div class="col-8">
+                        <a href="">Mentions légales</a> -
+                        <a href="">Conditions Générales d’Utilisation</a> -
+                        <a href="">Données personnelles</a> -
+                        <a href="">Charte sur les cookies</a> -
+                        <a href="">Manuscrits</a>
+                        <p>
+                            ASTERIX® OBELIX® IDEFIX®/© 2025 LES ÉDITIONS ALBERT RENÉ / GOSCINNY-UDERZO
+                        </p>
+                    </div>
+                    <div class="col-4">
+                        Lorem ipsum dolor
+                    </div>
+                </div>
+            </div>
         </div>
     </footer>
     <script type="module" src="/src/main.js"></script>
