--- a/src/assets/parts/Footer.html
+++ b/src/assets/parts/Footer.html
@@ -105,8 +105,10 @@
                             ASTERIX® OBELIX® IDEFIX®/© 2025 LES ÉDITIONS ALBERT RENÉ / GOSCINNY-UDERZO
                         </p>
                     </div>
-                    <div class="col-4">
-                        Lorem ipsum dolor
+                    <div class="col-4 contact">
+                        <a href="" class="btn">
+                            Nous contacter
+                        </a>
                     </div>
                 </div>
             </div>
