--- a/src/assets/parts/Header.html
+++ b/src/assets/parts/Header.html
@@ -23,30 +23,72 @@
             </div>
         </div>
         <nav aria-expanded="false" id="menu">
-            <div class="container">
-                <a href="">
-                    Les <br> actualités
-                </a>
-                <a href="">
-                    Les albums <br> et magazines
-                </a>
-                <a href="">
-                    Les <br>
-                    films
-                </a>
-                <a href="">
-                    Les <br> personnages
-                </a>
-                <a href="">
-                    Les <br> créateurs
-                </a>
-                <a href="">
-                    Les <br> institutions
-                </a>
-                <a href="">
-                    Le parc <br> Astérix
-                </a>
-            </div>
+            <ul class="container">
+                <li>
+                    <a href="">
+                        Les <br> actualités
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        Les albums <br> et magazines
+                    </a>
+                    <div class="sub-menu">
+                        <a href="">
+                            Les bandes dessinées
+                        </a>
+                        <a href="">
+                            Les albums illustrés
+                        </a>
+                        <a href="">
+                            Les éditions spéciales
+                        </a>
+                        <a href="">
+                            Les éditions de luxe
+                        </a>
+                        <a href="">
+                            Les bandes dessinées Idéfix
+                        </a>
+                    </div>
+                </li>
+                <li>
+                    <a href="">
+                        Les <br>
+                        films
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        Les <br> personnages
+                    </a>
+                     <div class="sub-menu">
+                        <a href="">
+                            Les Gaulois
+                        </a>
+                        <a href="">
+                            Les Romains
+                        </a>
+                        <a href="">
+                            Les autres...
+                        </a>
+                    </div>
+                </li>
+                <li>
+                    <a href="">
+                        Les <br> créateurs
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        Les <br> institutions
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        Le parc <br> Astérix
+                    </a>
+                </li>
+            </ul>
         </nav>
     </header>
     <main>
