--- a/src/assets/parts/Header.html
+++ b/src/assets/parts/Header.html
@@ -10,7 +10,7 @@
     <header>
         <div class="logo_search">
             <div class="logo">
-                <a aria-label="Lien vers la page d'accueil" href="#">
+                <a aria-label="Lien vers la page d'accueil" href="./index.html">
                     <img src="./src/assets/img/logo-asterix.png" alt="">
                 </a>
             </div>
@@ -49,6 +49,15 @@
                         <a href="">
                             Les bandes dessinées Idéfix
                         </a>
+                        <a href="">
+                            Les intégrales
+                        </a>
+                        <a href="">
+                            Les ouvrages de référence
+                        </a>
+                        <a href="">                           
+                            Astérix Max : le GROS magazine
+                        </a>
                     </div>
                 </li>
                 <li>
@@ -56,13 +65,24 @@
                         Les <br>
                         films
                     </a>
+                    <div class="sub-menu">
+                        <a href="">
+                            Les dessins animés
+                        </a>
+                        <a href="">
+                            Les films « Live »
+                        </a>
+                        <a href="">
+                            Idéfix et les Irréductibles – la série télé
+                        </a>
+                    </div>
                 </li>
                 <li>
                     <a href="">
                         Les <br> personnages
                     </a>
                      <div class="sub-menu">
-                        <a href="">
+                        <a href="./gaulois.html">
                             Les Gaulois
                         </a>
                         <a href="">
@@ -77,6 +97,14 @@
                     <a href="">
                         Les <br> créateurs
                     </a>
+                     <div class="sub-menu">
+                        <a href="">
+                            René Goscinny
+                        </a>
+                        <a href="">
+                            Albert Uderzo
+                        </a>
+                    </div>
                 </li>
                 <li>
                     <a href="">
