--- a/src/assets/parts/Hero-1.html
+++ b/src/assets/parts/Hero-1.html
@@ -2,7 +2,7 @@
     <div class="container narrow-md">
         <div class="row">
             <div class="col-6 col-sm-12">
-                <img src="./src/assets/img/<%= img%>" alt="">
+                <img  src="./src/assets/img/<%= img%>" alt="<%= title %>">
             </div>
             <div class="col-6 col-sm-12">
                 <div class="content">
