page gaulois fix

--- a/src/assets/parts/Card-2.html
+++ b/src/assets/parts/Card-2.html
@@ -1,6 +1,6 @@
 <article class="card-2">
     <figure aria-hidden="true">
-        <img class="watch" data-src="./src/assets/img/<%= img %>" alt="">
+        <img src="./src/assets/img/<%= img %>" alt="<%= title %>">
     </figure>
     <div class="content">
         <h1 class="h3">
