page: detail personnage

--- a/romains.html
+++ b/romains.html
@@ -1,187 +1,186 @@
 
-<%- include('./src/assets/parts/Header.html', {title:"Les Gaulois"})%>
+<%- include('./src/assets/parts/Header.html', {title:"Les Romains"})%>
 
    <%- include('./src/assets/parts/Hero-1.html', {
-    title:"Les Gaulois",
-    classes:'page-personnages', 
+    title:"Les Romains", 
+    classes:"page-personnages",
     content:" <p>Gaulois, Romains, Goths, Égyptiens… Sans oublier les Pirates ! Découvrez les secrets des personnages d’Astérix, des plus célèbres aux plus mystérieux (Saingésix, ça vous dit quelque chose ?). L’objectif de Panoramix pour ce trombinoscope version 50 avant J.-C. : rien moins qu’un dictionnaire exhaustif des personnages d’Astérix !</p>", 
-    img:"les-gaulois-img.png"})%>
+    img:"jules-cesar-img.png"})%>
      <section class="gaulois">
        <div class="container narrow-md">
          <div class="row">
           <div class="col-3 col-sm-6">
             <%- include('./src/assets/parts/Card-2.html',{
-              title: "Abraracourcix",
-              date:"1961",
-              img:"gaulois/abraracourcix.jpg"
+              title: "Absolumentexclus",
+              img:"romains/Absolumentexclus.png"
             })%>
           </div>
           <div class="col-3 col-sm-6">
             <%- include('./src/assets/parts/Card-2.html',{
-              title: "Acidenitrix",
-              img:"gaulois/acidenitrix.png"
+              title: "Anglaigus",
+              img:"romains/Anglaigus.gif"
             })%>
           </div>
           <div class="col-3 col-sm-6">
             <%- include('./src/assets/parts/Card-2.html',{
-              title: "Adrénaline",
-              img:"gaulois/adrenaline.png"
+              title: "Astérus",
+              img:"romains/Asterus.gif"
             })%>
           </div>
           <div class="col-3 col-sm-6">
             <%- include('./src/assets/parts/Card-2.html',{
-              title: "Agecanonix",
-              img:"gaulois/agecanonix.gif"
+              title: "Ballondebaudrus",
+              img:"romains/Ballondebaudrus.png"
             })%>
           </div>
           <div class="col-3 col-sm-6">
             <%- include('./src/assets/parts/Card-2.html',{
-              title: "Alambix",
-              img:"gaulois/Alambix.gif"
+              title: "Bégonia",
+              img:"romains/Begonia.gif"
             })%>
           </div>
           <div class="col-3 col-sm-6">
             <%- include('./src/assets/parts/Card-2.html',{
-              title: "Amérix",
-              img:"gaulois/amerix.png"
+              title: "Biscornus",
+              img:"romains/Biscornus.gif"
             })%>
           </div>
           <div class="col-3 col-sm-6">
             <%- include('./src/assets/parts/Card-2.html',{
-              title: "Amnésix",
-              img:"gaulois/amnesix.gif"
+              title: "Bonus Promoplus",
+              img:"romains/Bonus-Promoplus.gif"
             })%>
           </div>
           <div class="col-3 col-sm-6">
             <%- include('./src/assets/parts/Card-2.html',{
-              title: "Aniline",
-              img:"gaulois/aniline.png"
+              title: "Bonusmalus",
+              img:"romains/Bonusmalus.gif"
             })%>
           </div>
           <div class="col-3 col-sm-6">
             <%- include('./src/assets/parts/Card-2.html',{
-              title: "Aplusbégalix",
-              img:"gaulois/aplusbegalix.gif"
+              title: "Briseradius",
+              img:"romains/Briseradius.gif"
             })%>
           </div>
           <div class="col-3 col-sm-6">
             <%- include('./src/assets/parts/Card-2.html',{
-              title: "Archéoptérix",
-              img:"gaulois/archeopterix.gif"
+              title: "Brutus",
+              img:"romains/Brutus.gif"
             })%>
           </div>
           <div class="col-3 col-sm-6">
             <%- include('./src/assets/parts/Card-2.html',{
-              title: "Assurancetourix",
-              img:"gaulois/assurancetourix.jpg"
+              title: "Caius Aérobus",
+              img:"romains/Caius-Aerobus.gif"
             })%>
           </div>
           <div class="col-3 col-sm-6">
             <%- include('./src/assets/parts/Card-2.html',{
-              title: "Astérix",
-              img:"gaulois/asterix.jpg"
+              title: "Caius Bonus",
+              img:"romains/Caius-Bonus.gif"
             })%>
           </div>
           <div class="col-3 col-sm-6">
             <%- include('./src/assets/parts/Card-2.html',{
-              title: "Astronomix",
-              img:"gaulois/astronomix.gif"
+              title: "Caius Eucaliptus",
+              img:"romains/Caius-Eucaliptus.png"
             })%>
           </div>
           <div class="col-3 col-sm-6">
             <%- include('./src/assets/parts/Card-2.html',{
-              title: "Avoranfix",
-              img:"gaulois/avoranfix.png"
+              title: "Caius Joligibus",
+              img:"romains/Caius-Joligibus.gif"
             })%>
           </div>
           <div class="col-3 col-sm-6">
             <%- include('./src/assets/parts/Card-2.html',{
-              title: "Barométrix",
-              img:"gaulois/barometrix.png"
+              title: "Caius Marchéopus",
+              img:"romains/Caius-Marcheopus.png"
             })%>
           </div>
           <div class="col-3 col-sm-6">
             <%- include('./src/assets/parts/Card-2.html',{
-              title: "Beaufix",
-              img:"gaulois/beaufix.gif"
+              title: "Caius Obtus",
+              img:"romains/Caius-Obtus.png"
             })%>
           </div>
           <div class="col-3 col-sm-6">
             <%- include('./src/assets/parts/Card-2.html',{
-              title: "Berlix",
-              img:"gaulois/berlix.png"
+              title: "Caius Saugrenus",
+              img:"romains/Caius-Saugrenus.jpg"
             })%>
           </div>
           <div class="col-3 col-sm-6">
             <%- include('./src/assets/parts/Card-2.html',{
-              title: "Bonemine",
-              img:"gaulois/bonemine.jpg"
+              title: "Caius Soutienmordicus",
+              img:"romains/Caius-Soutienmordicus.png"
             })%>
           </div>
           <div class="col-3 col-sm-6">
             <%- include('./src/assets/parts/Card-2.html',{
               title: "Boufiltre",
-              img:"gaulois/boufiltre.gif"
+              img:"romains/boufiltre.gif"
             })%>
           </div>
           <div class="col-3 col-sm-6">
             <%- include('./src/assets/parts/Card-2.html',{
               title: "Catédralgotix",
-              img:"gaulois/catedralgotix.png"
+              img:"romains/catedralgotix.png"
             })%>
           </div>
           <div class="col-3 col-sm-6">
             <%- include('./src/assets/parts/Card-2.html',{
               title: "César Labeldecadix",
-              img:"gaulois/cesar-labeldecadix.png"
+              img:"romains/cesar-labeldecadix.png"
             })%>
           </div>
           <div class="col-3 col-sm-6">
             <%- include('./src/assets/parts/Card-2.html',{
               title: "Cétautomatix",
-              img:"gaulois/cetautomatix.jpg"
+              img:"romains/cetautomatix.jpg"
             })%>
           </div>
           <div class="col-3 col-sm-6">
             <%- include('./src/assets/parts/Card-2.html',{
               title: "Cétyounix",
-              img:"gaulois/cetyounix.gif"
+              img:"romains/cetyounix.gif"
             })%>
           </div>
           <div class="col-3 col-sm-6">
             <%- include('./src/assets/parts/Card-2.html',{
               title: "Changéledix",
-              img:"gaulois/changeledix.png"
+              img:"romains/changeledix.png"
             })%>
           </div>
           <div class="col-3 col-sm-6">
             <%- include('./src/assets/parts/Card-2.html',{
               title: "Chanteclairix",
-              img:"gaulois/chanteclairix.gif"
+              img:"romains/chanteclairix.gif"
             })%>
           </div>
           <div class="col-3 col-sm-6">
             <%- include('./src/assets/parts/Card-2.html',{
               title: "Cicatrix",
-              img:"gaulois/cicatrix.gif"
+              img:"romains/cicatrix.gif"
             })%>
           </div>
           <div class="col-3 col-sm-6">
             <%- include('./src/assets/parts/Card-2.html',{
               title: "Comix",
-              img:"gaulois/comix.gif"
+              img:"romains/comix.gif"
             })%>
           </div>
           <div class="col-3 col-sm-6">
             <%- include('./src/assets/parts/Card-2.html',{
               title: "Coriza (Zaza)",
-              img:"gaulois/CorizaZaza.gif"
+              img:"romains/CorizaZaza.gif"
             })%>
           </div>
           <div class="col-3 col-sm-6">
             <%- include('./src/assets/parts/Card-2.html',{
               title: "Diagnostix",
-              img:"gaulois/diagnostix.gif"
+              img:"romains/diagnostix.gif"
             })%>
           </div>
          </div>
