--- a/src/assets/parts/Header.html
+++ b/src/assets/parts/Header.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./src/assets/img/favicon.ico" sizes="192x192" />
+    <meta name="robots" content="noindex, nofollow">
     <title><%=title%> | <%=slogan%></title>
 </head>
 <body>
@@ -85,7 +86,7 @@
                         <a href="./gaulois.html">
                             Les Gaulois
                         </a>
-                        <a href="">
+                        <a href="./romains.html">
                             Les Romains
                         </a>
                         <a href="">
