--- a/src/assets/parts/Hero-1.html
+++ b/src/assets/parts/Hero-1.html
@@ -1,9 +1,9 @@
-<section class="hero-1">
+<section class="hero-1 <%= classes %>">
     <div class="container narrow-md">
         <div class="row">
-            <div class="col-6 col-sm-12">
+            <figure class="col-6 col-sm-12">
                 <img  src="./src/assets/img/<%= img%>" alt="<%= title %>">
-            </div>
+            </figure>
             <div class="col-6 col-sm-12">
                 <div class="content">
                     <h1 class="h1">
