--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
    <%- include('./src/assets/parts/Hero-1.html', {
     title:"Les bandes dessinées", 
+    classes:'',
     content:" <p>Depuis leur première histoire, Astérix, Obélix et les Irréductibles ont vécu de nombreuses aventures, que ce soit au village ou aux quatre coins du monde. Ils ont rencontré de nombreux amis, relevé des défis mémorables… et bien sûr, affronté des adversaires fous (surtout ces Romains !).</p><p>Retrouvez ici l’intégralité de la collection des albums classiques.</p>", 
     img:"Asterix-Bandes-dessinees.png"})%>
      <section class="livres">
