--- a/src/assets/parts/Card-2.html
+++ b/src/assets/parts/Card-2.html
@@ -3,11 +3,11 @@
         <img src="./src/assets/img/<%= img %>" alt="<%= title %>">
     </figure>
     <div class="content">
-        <h1 class="h3">
+        <h1 class="h4">
             <%= title %>
         </h1>
     </div>
-    <a href="#">
+    <a href="./detail-personnage.html">
         Découvrir <span class="icon-arrow"></span>
     </a>
 </article>
